# soft_design

./: CMakeLists.txt
10_clock/clock_pattern/: CMakeLists.txt
10_clock/clock_pattern/include/: setable_clock.h  statistics.h
10_clock/clock_pattern/source/: main.cpp  setable_clock.cpp
10_clock/clock_pattern/tests/: statistics_test.cpp
2_twitter/: CMakeLists.txt
2_twitter/3dparty/chilkat/include/: C_CkAsn.h  C_CkAsnW.h  C_CkAtom.h  C_CkAtomW.h  C_CkAuthAws.h  C_CkAuthAwsW.h  C_CkAuthAzureAD.h  C_CkAuthAzureADW.h  C_CkAuthAzureStorage.h  C_CkAuthAzureStorageW.h  C_CkAuthGoogle.h  C_CkAuthGoogleW.h  C_CkBounce.h  C_CkBounceW.h  C_CkByteData.h  C_CkBz2.h  C_CkBz2W.h  C_CkCache.h  C_CkCacheW.h  C_CkCert.h  C_CkCertChain.h  C_CkCertChainW.h  C_CkCertStore.h  C_CkCertStoreW.h  C_CkCertW.h  C_CkCgi.h  C_CkCgiW.h  C_CkCharset.h  C_CkCharsetW.h  C_CkCompression.h  C_CkCompressionW.h  C_CkCreateCS.h  C_CkCreateCSW.h  C_CkCrypt2.h  C_CkCrypt2W.h  C_CkCsp.h  C_CkCspW.h  C_CkCsv.h  C_CkCsvW.h  C_CkDateTime.h  (+180 more)
2_twitter/3dparty/json_spirit/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
2_twitter/3dparty/json_spirit/json_demo/: cmake_install.cmake  json_demo.cpp
2_twitter/3dparty/json_spirit/json_headers_only_demo/: cmake_install.cmake  json_headers_only_demo
2_twitter/3dparty/json_spirit/json_map_demo/: cmake_install.cmake
2_twitter/3dparty/json_spirit/json_spirit/: cmake_install.cmake
2_twitter/3dparty/json_spirit/json_test/: cmake_install.cmake
2_twitter/include/: TweetStatistics.h  TwitterResponce.h
2_twitter/source/: TwitterManager.cpp
2_twitter/tests/: MockTwitterManager.h  TestTweetStatistics.cpp
4_mvc_todolist/mvc/src/main/java/ru/akirakozov/sd/mvc/config/: InMemoryDaoContextConfiguration.java  WebConfig.java
4_mvc_todolist/mvc/src/main/java/ru/akirakozov/sd/mvc/controller/: ProductController.java
4_mvc_todolist/mvc/src/main/java/ru/akirakozov/sd/mvc/dao/: ToDoDao.java  ToDoInMemoryDao.java
4_mvc_todolist/mvc/src/main/java/ru/akirakozov/sd/mvc/model/: GroupOfToDo.java  ToDo.java
4_mvc_todolist/mvc/src/main/resources/webapp/WEB-INF/views/: index.jsp  main.css
5_bridge_pattern/: AdjacencyMatrixGraph.h  BlackDrawingApi.h  DrawingApi.h  Graph.h  GreenDrawingApi.h  ListOfEdgesGraph.h  MainForm.ui.qml  RenderArea.cpp  RenderArea.h  Window.cpp  Window.h  bridge.pro  graphs.qrc  main.cpp
5_bridge_pattern/graphs/: adjacency_matrix1.txt
6_exprs/: CMakeLists.txt
6_exprs/include/: brace_token.h  calc_visitor.h  number_token.h  operation_token.h  parser_visitor.h  token.h  token_visitor.h  tokenizer.h
6_exprs/source/: calc_visitor.cpp  main.cpp  operation_token.cpp  parser_visitor.cpp  tokenizer.cpp
8_actors/actors/: CMakeLists.txt
8_actors/actors/include/: stub_server.h
8_actors/actors/source/: main.cpp  stub_server.cpp
include/: JsonParser.h  TweetStatistics.h  TwitterManager.h
source/: JsonParser.cpp  TweetStatistics.cpp  TwitterManager.cpp  main.cpp
tests/: MockJsonParser.h  MockTwitterManager.cpp  TestJsonParser.cpp  TestTweetStatistics.cpp
